# mini-perplexity

./: README.md  config.py  gen_ai.py  main.py  pyproject.toml  search_engine.py  utils.py  web_crawler.py
static/: index.html
