[tool.poetry]
name = "mini-perplexity"
version = "0.1.0"
description = ""
authors = ["Aswath S <aswath7862001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.8.3"
google-api-python-client = "^2.151.0"
fastapi = {extras = ["all"], version = "^0.115.4"}
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
